projet exam/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql-db
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: mysql-db
spec:
  replicas: 2
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7.44
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: mysql-vol
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mysql-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
